2012-06-?? 2.0.0 Sven-S. Porst <porst@sub.uni-goettingen.de>
	* Clean up class structure.
	* Add option for column style display.
	* Reduce superfluous CSV file imports.
	* Drop TYPO3 4.5 compatibility

2012-02-22 1.6.0 Sven-S. Porst <porst@sub.uni-goettingen.de>
	* Make number of inline menu child elements configurable through the `menuInlineThreshold` TypoScript setting.

2012-01-27 1.5.0 Sven-S. Porst <porst@sub.uni-goettingen.de>
	* Ignore hierarchy level in Pica field 009B $a and compute the value ourselves.
		We depend on this data being correct and it may be incorrect, causing an
		infinite loop.
	* Refactor functions and variables.
	* Split XML files generated from CSV files into chunks of 500 records (to
		avoid hitting the 128MB RAM limit for PHP)
	* CHANGE CSV DATA FORMAT: remove columns 2 and 3
	* Fix links to Opac (enclose search terms in quotation marks)

2012-01-23 1.4.0 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* add nofollow attribute to tree expansion/collapsing links to reduce overzealous spidering

2011-12-13 1.3.0 Sven-S. Porst <porst@sub.uni-goettingen.de>
	* improve usage of deep Opac links (introduce a 'General' element for the records associated to parent nodes)
	* fix bug with importing introduced in 1.2.1

2011-11-25 1.2.1 Sven-S. Porst <porst@sub.uni-goettingen.de>
	* switch default Opac URL to https
	* only retrieve records with statusID = 0 in database queries to avoid duplicates
	* use quotation marks in term used for index scans
	* deal with differing data structure returned by TYPO3 4.6’s t3lib_div::readLLXMLfile()
	* fix incorrect processing of the shallowSearch TypoScript setting

2011-11-24 1.2.0 Sven-S. Porst <porst@sub.uni-goettingen.de>
	* vastly reduce downtime due to database update (batch add new records, switch with old records after import has finished) REQUIRES DATABASE SCHEMA UPDATE
	* fix localisation problem in TYPO3 4.6
	* extend timeout for long scheduler actions to 20 minutes